# whispr

./: Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt
